share state between apps

--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -52,7 +52,8 @@
         "@org1/react-18-app-1": "//localhost:8080/org1-react-18-app-1.js",
         "@org1/react-18-app-2": "//localhost:8081/org1-react-18-app-2.js",
         "angular-14-app-1": "//localhost:4200/main.js",
-        "angular-14-app-2": "//localhost:4202/main.js"
+        "angular-14-app-2": "//localhost:4202/main.js",
+        "@example/utils": "http://localhost:9001/index.js"
       }
     }
   </script>
