--- a/angular-14-app-1/src/app/app.component.html
+++ b/angular-14-app-1/src/app/app.component.html
@@ -9,7 +9,9 @@
 
 <style>
   :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
     font-size: 14px;
     color: #333;
     box-sizing: border-box;
@@ -20,12 +22,17 @@
   .toolbar {
     margin-top: 100px;
   }
-
 </style>
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
   Angular 14 App 1 loaded
+
+  <br />
+  <br />
+  <br />
+
+  Resultado é: {{ count }}
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
